tests/ui/using-for/operators/definitions/mismatched_attached_type.stderr
error: wrong parameters in operator definition
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ function add(Int) pure returns (Int) {}
   │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ╰╴
note: function was used to implement an operator here
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ using {add as +, sub as -, div as /} for Int global;
   │        ━━━
   ╰ help: function `add` needs to have two parameters of type `Int` to be used for operator `+`

error: wrong parameters in operator definition
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ function sub(Int, Int, Int) pure returns (Int) {}
   │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ╰╴
note: function was used to implement an operator here
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ using {add as +, sub as -, div as /} for Int global;
   │                  ━━━
   ╰ help: function `sub` needs to have one or two parameters of type `Int` to be used for operator `-`

error: wrong parameters in operator definition
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ function div(int256, int256) pure returns (Int) {}
   │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ╰╴
note: function was used to implement an operator here
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ using {add as +, sub as -, div as /} for Int global;
   │                            ━━━
   ╰ help: function `div` needs to have one or two parameters of type `Int` to be used for operator `/`

error: wrong return parameters in operator definition
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ function div(int256, int256) pure returns (Int) {}
   │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ╰╴
note: function was used to implement an operator here
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │ using {add as +, sub as -, div as /} for Int global;
   │                            ━━━
   ╰ help: function `div` needs to return `Int` to be used for operator `/`

error: cannot apply builtin operator `+` to `Int` and `Int`
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │     Int.wrap(0) + Int.wrap(1);
   │     ┬────────── ━ ─────────── Int
   │     │
   ╰╴    Int

error: cannot apply builtin operator `-` to `Int` and `Int`
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │     Int.wrap(0) - Int.wrap(0);
   │     ┬────────── ━ ─────────── Int
   │     │
   ╰╴    Int

error: cannot apply builtin operator `/` to `Int` and `Int`
   ╭▸ ROOT/tests/ui/using-for/operators/definitions/mismatched_attached_type.sol:LL:CC
   │
LL │     Int.wrap(0) / Int.wrap(0);
   │     ┬────────── ━ ─────────── Int
   │     │
   ╰╴    Int

error: aborting due to 7 previous errors

